--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "mapbox": "^1.0.0-beta10",
     "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-grid-component": "^1.1.0",
     "react-native-maps": "^0.21.0",
     "react-native-rescomponent": "^1.0.4",
